# rsbbi

./: Cargo.toml  README.md
extra/: style.json
notes/: todo
src/: common.rs  main.rs  parser.rs  setup.rs
src/common/: download_json.rs  ferror.rs  search.rs
src/logging/: log.rs
src/parser/: args.rs  bible.pest  bible_verse.rs  info.rs  keyword.rs  shape.rs  tetragrammaton.rs  text.rs
src/setup/: download.rs  setup.rs  skin.rs
