[package]
name = "rsbbi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
clap-num = "1.1.1"
html2md = "0.2.14"
html2text = "0.12.4"
pest = "2.7.8"
pest_derive = "2.7.8"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
serde_path_to_error = "0.1.15"
strip_markdown = "0.2.0"
termimad = "0.29.1"
url = "2.5.0"
urlencoding = "2.1.3"

[features]
tetragrammaton-logging = []

default = ["tetragrammaton-logging"]
